[package]
name = "rantz_camera2d"
version = "0.3.10"
authors = ["Robert Gardner'"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BobG1983/rantz_camera2d"
homepage = "https://github.com/BobG1983/rantz_camera2d"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "A 2D camera plugin for Bevy, inspired by the Love2D camera plugin - STALKER-X"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy_render", "bevy_core_pipeline"]
bevy_render = ["bevy/bevy_render"]
bevy_core_pipeline = ["bevy/bevy_core_pipeline"]

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.13.2", default-features = false }
rantz_spatial2d = "0.3.7"
# rantz_spatial2d = { path = "../rantz_spatial2d" }


[dev-dependencies]
bevy = "0.13.2"
