[package]
name = "rantz_camera2d"
version = "1.0.0"
authors = ["Robert Gardner'"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BobG1983/rantz_camera2d"
homepage = "https://github.com/BobG1983/rantz_camera2d"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "A 2D camera plugin for Bevy, inspired by the Love2D camera plugin - STALKER-X"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.14.0"
rantz_spatial2d = "3.0.0"
# rantz_spatial2d = { path = "../rantz_spatial2d" }
